# faultit

./: .mypy.ini  README.md  pyproject.toml
faultit/: apply.py  blame.py  change.py  hunk_utils.py  main.py  match_lines.py
tests/: test_faultit.py
