[tool.poetry]
name = "faultit"
version = "0.1.0"
description = ""
authors = ["shahar.yarn <shahar.yarn@gmail.com>"]

[tool.poetry.scripts]
faultit = 'faultit.main:main'

[tool.poetry.dependencies]
python = "^3.8"
pygit2 = "^1.9.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
autoflake = "^1.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
